--- a/src/lang/zh.json
+++ b/src/lang/zh.json
@@ -60,6 +60,16 @@
 			"title": "成功",
 			"message": "退出成功"
 		}
+	},
+	"drawer": {
+		"change_password": {
+			"title": "修改密码",
+			"old_password_placeholder": "旧密码",
+			"new_password_placeholder": "新密码",
+			"confirm_password_placeholder": "确认密码",
+			"button_cancle": "取消",
+			"button_confirm": "确认"
+		}
 	}
 }
   
