--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -67,6 +67,12 @@
 			"success_message": "Cambio de contraseña exitoso",
 			"error_title": "Error",
 			"error_message": "Error al cambiar la contraseña"
+		},
+		"register": {
+			"success_title": "Éxito",
+			"success_message": "Registro exitoso",
+			"error_title": "Error",
+			"error_message": "Error al registrarse"
 		}
 	},
 	"drawer": {
@@ -80,6 +86,19 @@
 			"confirm_passwordError_empty": "La confirmación de la contraseña no puede estar vacía",
 			"old_password_label": "Contraseña antigua",
 			"new_password_label": "Nueva contraseña",
+			"confirm_password_label": "Confirmar contraseña"
+		},
+		"register": {
+			"title": "Registrarse",
+			"username_placeholder": "Ingrese nombre de usuario",
+			"password_placeholder": "Ingrese contraseña",
+			"confirm_password_placeholder": "Confirmar contraseña",
+			"usernameError_empty": "El nombre de usuario no puede estar vacío",
+			"passwordError_empty": "La contraseña no puede estar vacía",
+			"passwordError_length": "La contraseña no puede tener menos de 4 caracteres",
+			"confirm_passwordError_empty": "La confirmación de la contraseña no puede estar vacía",
+			"username_label": "Nombre de usuario",
+			"password_label": "Contraseña",
 			"confirm_password_label": "Confirmar contraseña"
 		}
 	},
