--- a/src/lang/zh.json
+++ b/src/lang/zh.json
@@ -20,7 +20,7 @@
 	"login": {
 		"page_title": "登录",
 		"left_title": "欢迎光临",
-		"left_title_msg": "该产品由...公司开发, 有其他软件制作的需求, 请联系: xxxxxxxxxxx",
+		"left_title_msg": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
 		"button_text": "登录",
 		"username_placeholder": "请输入用户名",
 		"password_placeholder": "请输入密码",
