--- a/src/lang/zh.json
+++ b/src/lang/zh.json
@@ -193,7 +193,35 @@
 		  "list": {
 			"page_title": "通知管理"
 		  }
+		},
+		"dropdown": {
+			"close_other": "关闭其他",
+			"close_all": "关闭所有"
 		}
-	}	  
+	},
+	"后台面板": "后台面板",
+	"主控台": "主控台",
+	"商品管理": "商品管理",
+	"分类管理": "分类管理",
+	"规格管理": "规格管理",
+	"优惠券管理": "优惠券管理",
+	"用户管理": "用户管理",
+	"会员等级": "会员等级",
+	"订单管理": "订单管理",
+	"评论管理": "评论管理",
+	"管理员管理": "管理员管理",
+	"权限管理": "权限管理",
+	"角色管理": "角色管理",
+	"系统设置": "系统设置",
+	"基础设置": "基础设置",
+	"交易设置": "交易设置",
+	"物流设置": "物流设置",
+	"分销模块": "分销模块",
+	"分销员管理": "分销员管理",
+	"分销设置": "分销设置",
+	"其他模块": "其他模块",
+	"图库管理": "图库管理",
+	"公告管理": "公告管理",
+	"help": "帮助"
 }
   
